--- a/cats/static/css/project.css
+++ b/cats/static/css/project.css
@@ -1,4 +1,12 @@
-/* These styles are generated from project.scss. */
+body {
+  font-family: 'JetBrains Mono', monospace !important;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
+.cover-container {
+  max-width: 42em;
+}
 
 .alert-debug {
   color: black;
