--- a/cats/templates/base.html
+++ b/cats/templates/base.html
@@ -10,15 +10,25 @@
     <meta name="author" content="Mark Cobo">
     {% block css %}
       <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
+      <link href="{% static 'css/project.css' %}" rel="stylesheet">
+      <link href="{% static 'css/fontawesome.min.css' %}" rel="stylesheet">
+      <link href="{% static 'css/solid.min.css' %}" rel="stylesheet">
+      <link href="{% static 'css/brands.min.css' %}" rel="stylesheet">
+
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-      <link href="{% static 'css/project.css' %}" rel="stylesheet">
+
     {% endblock %}
     {% block javascript %}
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-      <script src="https://kit.fontawesome.com/dbfe198401.js" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     {% endblock javascript %}
+    <script>
+      $(document).ready(function(){
+        console.log('done loading...')
+      });
+    </script>
   </head>
   <body class="d-flex h-100 text-center text-bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
