--- a/cats/templates/pages/flamingo.html
+++ b/cats/templates/pages/flamingo.html
@@ -70,7 +70,7 @@
       }
     </script>
 
-    <script>const flamingoModel = "{% static 'models/Flamingo.glb' %}"</script>
+    <script type="text/javascript">const flamingoModel = "{% static 'models/Flamingo.glb' %}"</script>
     <script type="module" src="{% static 'js/three.js' %}"></script>
   </head>
   <body>
