--- a/cats/templates/base.html
+++ b/cats/templates/base.html
@@ -18,27 +18,29 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-
     {% endblock %}
     {% block javascript %}
+      <script src="{% static "js/htmx.min.js" %}"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     {% endblock javascript %}
-    <script>
+    <script type="text/javascript">
       $(document).ready(function(){
-        console.log('done loading...')
+        {#htmx.logAll();#}
+        // show loading screen
       });
     </script>
   </head>
   <body class="d-flex h-100 text-center text-bg-dark">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
       {% include "components/navbar.html" %}
-      <main class="px-3">
+      <main class="p-3">
         {% block content %}{% endblock %}
       </main>
       <footer class="mt-auto text-white-50">
         <p>Built using <a target="_blank" href="https://thecatapi.com/" class="text-white">Cats API</a>. Because everyday is a Caturday.</p>
       </footer>
     </div>
+    {% block inline_javascript %}{% endblock %}
   </body>
 </html>
