--- a/cats/templates/pages/home.html
+++ b/cats/templates/pages/home.html
@@ -1,135 +1,66 @@
 {% extends "base.html" %}
+{% load utility_filters %}
 
 {% block css %}
   {{ block.super }}
   <style>
-    .card-circle{
-        text-align:center;
-         margin-top:50px;
-         background:#27496D;
-         border:10px solid transparent;
-         color:#fff;
-         padding:50px;
-         border-radius:50%;
-    }
-     .card-circle .card-title{
-        font-weight:600;
-        font-size:26px;
-    }
-     .card-circle .card-text{
-        font-weight:400;
-    }
-     .card-circle .card-icon i{
-         font-size:60px;
+     .card-icon i {
+         font-size:50px;
          display:block;
-    }
-     .card-circle:nth-child(2){
-        background:#142850;
-    }
-     .card-circle .btn{
-        background:transparent;
-         border:1px solid #fff;
-         text-transform:uppercase;
-         padding:5px 30px;
-         border-radius:0px;
-         Font-weight:600;
-    }
-    .card-circle .btn,.card-circle .card-icon i,.card-circle{
-       transition: all ease-in-out 0.2s;
-    }
-     .card-circle:hover .btn{
-        background:#00A8CC;
-         color:#fff;
-       border: 1px solid transparent;
-    }
-     .card-circle .btn:hover{
-        transform: scale(1.1);
-    }
-     .card-circle:hover{
-        border:10px solid #00A8CC;
-    }
-     .card-circle:hover i {
+         transition: all ease-in-out 0.2s;
+      }
+     .card-icon:hover i {
        text-shadow: 0px -1px 10px #00A8CC;
         transform:scale(1.2)rotate(20deg);
-    }
-     @media only screen and (min-width: 1200px) {
-         .card-circle:nth-child(3){
-             margin-left:-40px;
-             z-index:0;
-        }
-         .card-circle{
-             width:400px;
-             height:400px;
-        }
-         .card-circle:nth-child(2){
-             margin-left:-20px;
-             box-shadow: 1px 2px 20px 8px rgba(241, 235, 235, 0.12);
-             transform: scale(1.2);
-             z-index:1;
-        }
-       .card-circle .card-icon i{
-          margin-top: 20px;
-         }
-    }
-    @media only screen and (min-width: 991px) and (max-width: 1200px) {
-       .card-circle{
-             width:340px;
-             height:340px;
-        }
-      .card-circle .card-icon i{
-         font-size:50px;
-       }
-      .card-circle .card-icon i{
-          margin-top: -25px;
-         }
-       .card-circle:nth-child(3){
-             margin-left:-50px;
-             z-index:0;
-        }
-       .card-circle:nth-child(2){
-             margin-left:-20px;
-             z-index:1;
-        }
     }
   </style>
 {% endblock %}
 
 {% block content %}
   <div class="container overflow-visible">
-     <div class="row flex-nowrap position-absolute top-50 start-50 translate-middle">
-       <!-- card1 -->
-        <div class="card card-circle">
-           <div class="card-icon">
-              <i class="fa-brands fa-searchengin"></i>
-           </div>
-           <div class="card-body">
-              <h5 class="card-title">Search</h5>
-              <p class="card-text">Experience the surprise of getting a random cat with just a click.</p>
-              <a href="#" class="btn btn-primary">Surprise me</a>
-           </div>
+    <div class="text-start modal-dialog" role="document">
+      <div class="modal-content rounded-5 shadow-lg">
+        <div class="modal-body p-5">
+          <h1 class="display-5 mb-5 text-center">Features</h1>
+          <ul class="list-unstyled">
+            <li class="row mb-4">
+               <div class="d-none d-sm-block align-self-center col-2 card-icon text-center">
+                <i class="fa-brands fa-searchengin"></i>
+               </div>
+              <div class="col">
+                <p class="mb-1 lead" style="color:{{ "pastel"|color }}">Search</p>
+                <p><small>Experience the surprise of getting a random cat with just a click.</small></p>
+                <a
+                   type="button"
+                   class="btn btn-outline-success {% if not images %}disabled{% endif %}"
+                   onclick="$('#random-cats').modal('show')"
+                 >Surprise me</a>
+              </div>
+            </li>
+            <li class="row mb-4">
+               <div class="d-none d-sm-block align-self-center col-2 card-icon text-center">
+                  <i class="fa-solid fa-cat"></i>
+               </div>
+              <div class="col">
+                <h5 class="mb-1 lead" style="color:{{ "pastel"|color }}">Breeds</h5>
+                <p><small>Browse cat breeds, learn about their temperaments, and understand unique characteristics.</small></p>
+                <a type="button" href="{% url 'breeds:list' %}" class="btn btn-outline-danger">Explore now</a>
+              </div>
+            </li>
+            <li class="row">
+             <div class="d-none d-sm-block align-self-center col-2 card-icon text-center">
+                <i class="fa-solid fa-code"></i>
+             </div>
+              <div class="col">
+                <h5 class="mb-1 lead" style="color:{{ "pastel"|color }}">Learn</h5>
+                <p><small>Explore the development and design steps behind this website's creation.</small></p>
+                <a type="button" href="{% url 'about' %}" class="btn btn-outline-warning">Let's go</a>
+              </div>
+            </li>
+          </ul>
         </div>
-        <!-- card2 -->
-        <div class="card card-circle">
-           <div class="card-icon">
-              <i class="fa-solid fa-cat"></i>
-           </div>
-           <div class="card-body">
-              <h5 class="card-title">Breeds</h5>
-              <p class="card-text">Browse cat breeds, learn about their temperaments, and understand unique characteristics.</p>
-              <a href="#" class="btn btn-primary">Explore</a>
-           </div>
-        </div>
-        <!-- card3 -->
-        <div class="card card-circle ">
-           <div class="card-icon">
-              <i class="fa-solid fa-code"></i>
-           </div>
-           <div class="card-body">
-              <h5 class="card-title">Learn</h5>
-              <p class="card-text">Explore the development and design steps behind our website's creation.</p>
-              <a href="#" class="btn btn-primary">I'm interested</a>
-           </div>
-        </div>
-     </div>
+      </div>
+    </div>
   </div>
+  {% include "breeds/partials/random.html" %}
 {% endblock %}
